Fix property alignement in schemas

--- a/src/components/Property/Property.scss
+++ b/src/components/Property/Property.scss
@@ -7,7 +7,7 @@ $cell-padding: 10px;
 
 .property-name,
 .property-info {
-  vertical-align: top;
+  vertical-align: middle;
   padding: $cell-padding;
 }
 
